c++2011 support: proper type deduction in auto range-based-for

for c-arrays we take the element type
for all other types we look via ADL for begin(listType)
and then dereference the return type of that function

See 6.5.4 in the C++2011 spec

BUG: 279728