languages/cpp/cppduchain/tests/test_duchain.h
@@ -192,6 +192,7 @@ private slots:
 
   //BEGIN C++2011
   void testRangeBasedFor();
+  void testRangeBasedForClass();
   void testRValueReference();
   void testDefaultDelete();
   void testDelete_Bug278781();
